syntax = "proto3";

package cheese.v1;

service CheeseAPI {
    rpc GetOneCheese(GetOneCheeseRequest) returns (GetOneCheeseResponse);
    rpc GetAllCheeses(GetAllCheesesRequest) returns (GetAllCheesesResponse);
}

message GetOneCheeseRequest {
    int64 id = 1;
}

message GetOneCheeseResponse {
    Cheese cheese = 1;
}

message GetAllCheesesRequest {
    int64 offset = 1;
    int64 limit = 2;
}

message GetAllCheesesResponse {
    repeated Cheese cheeses = 1;
}

message Cheese {
    int64 id=1;
    string departement=2;
    string fromage=3;
    string pageFrancaise=4;
    string pageAnglaise=5;
    string lait=6;
    string geoShape=7;
    string geoPoint2D=8;
}
